--- a/comandospython.ipynb
+++ b/comandospython.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNe9J2IKYMe9s+m8Wf64XhL",
+      "authorship_tag": "ABX9TyM7Sf/UN5kYVm4N6apWmbUt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,7 +152,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
+          "height": 91
         },
         "id": "zIUQ-oWqIKsH",
         "outputId": "54b08c34-b051-4c96-b019-1cfaa0d5dbe1"
@@ -421,10 +421,28 @@
         "print(a*2)#se vuelve a repetir la lista"
       ],
       "metadata": {
-        "id": "E8p8D220YLqN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E8p8D220YLqN",
+        "outputId": "9490229a-44f2-409c-e30e-1c7475efe2a4"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "7\n",
+            "16\n",
+            "105\n",
+            "4\n",
+            "[1, 3, 5, 7, 6, 7, 8]\n",
+            "[1, 3, 5, 7, 1, 3, 5, 7]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -440,7 +458,314 @@
         "print(name.count(b'a'))#cuenta cuantas 'a' hay"
       ],
       "metadata": {
-        "id": "cmClOlb3idB7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cmClOlb3idB7",
+        "outputId": "8ab3a5e3-9c11-4519-def0-80f756734085"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "bytearray(b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00')\n",
+            "bytearray(b'\\x00\\x01\\x02\\x03\\x04')\n",
+            "bytearray(b'Kina')\n",
+            "bytearray(b'LINA')\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "from datetime import datetime\n",
+        "\n",
+        "# Define la clase DatetimeEncoder que personaliza la serialización JSON.\n",
+        "class DatetimeEncoder(json.JSONEncoder):\n",
+        "    def default(self, obj):\n",
+        "        if isinstance(obj, datetime):\n",
+        "            try:\n",
+        "                off = obj.utcoffset().seconds\n",
+        "            except AttributeError:\n",
+        "                off = None\n",
+        "            return {\n",
+        "                '_meta': '_datetime',\n",
+        "                'data': obj.timetuple()[:6] + (obj.microsecond,),\n",
+        "                'utcoffset': off,\n",
+        "            }\n",
+        "        return super().default(obj)\n",
+        "\n",
+        "# Crear objetos datetime\n",
+        "now = datetime.now()\n",
+        "now_tz = datetime.now().astimezone()\n",
+        "\n",
+        "# Crear un diccionario con varios tipos de datos, incluyendo objetos datetime.\n",
+        "data = {\n",
+        "    'un_entero': 42,\n",
+        "    'un_float': 3.14159265,\n",
+        "    'un_datetime': now,\n",
+        "    'un_datetime_con_zona_horaria': now_tz,\n",
+        "}\n",
+        "\n",
+        "# Serializar el diccionario a JSON utilizando la clase DatetimeEncoder personalizada.\n",
+        "json_data = json.dumps(data, cls=DatetimeEncoder)\n",
+        "\n",
+        "# Imprimir el JSON resultante.\n",
+        "print(json_data)\n"
+      ],
+      "metadata": {
+        "id": "t_p9_OslHEfP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "from datetime import datetime, timezone, timedelta\n",
+        "\n",
+        "# Define la función object_hook para personalizar la deserialización JSON.\n",
+        "def object_hook(obj):\n",
+        "    try:\n",
+        "        if obj['_meta'] == '_datetime':\n",
+        "            if obj['utcoffset'] is None:\n",
+        "                tz = None\n",
+        "            else:\n",
+        "                tz = timezone(timedelta(seconds=obj['utcoffset']))\n",
+        "            return datetime(*obj['data'], tzinfo=tz)\n",
+        "    except KeyError:\n",
+        "        return obj\n",
+        "\n",
+        "# Crear un diccionario con un objeto datetime para serializar.\n",
+        "data = {\n",
+        "    'un_datetime': datetime(2023, 9, 20, 10, 30, tzinfo=timezone.utc)\n",
+        "}\n",
+        "\n",
+        "# Serializar el diccionario a JSON utilizando la clase DatetimeEncoder personalizada.\n",
+        "json_data = json.dumps(data, cls=DatetimeEncoder)\n",
+        "\n",
+        "# Imprimir la cadena JSON resultante.\n",
+        "print(\"JSON serializado:\")\n",
+        "print(json_data)\n",
+        "\n",
+        "# Deserializar la cadena JSON utilizando el object_hook personalizado.\n",
+        "data_out = json.loads(json_data, object_hook=object_hook)\n",
+        "\n",
+        "# Imprimir el objeto deserializado.\n",
+        "print(\"\\nObjeto deserializado:\")\n",
+        "print(data_out)\n"
+      ],
+      "metadata": {
+        "id": "9jfKupq1HNoI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import io\n",
+        "\n",
+        "# Creamos un objeto StringIO vacío.\n",
+        "stream = io.StringIO()\n",
+        "\n",
+        "# Escribimos una línea de texto en el objeto StringIO.\n",
+        "stream.write('Aprendiendo programación en Python.\\n')\n",
+        "\n",
+        "# Agregamos otra línea de texto al objeto StringIO utilizando la función \"print\".\n",
+        "print('¡Conviértete en un ninja de Python!', file=stream)\n",
+        "\n",
+        "# Obtenemos el contenido del objeto StringIO.\n",
+        "contents = stream.getvalue()\n",
+        "\n",
+        "# Imprimimos el contenido.\n",
+        "print(contents)\n",
+        "\n",
+        "# Cerramos el objeto StringIO.\n",
+        "stream.close()"
+      ],
+      "metadata": {
+        "id": "HUff1pCiHZgy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "\n",
+        "# Definimos un diccionario con títulos y URL a las que haremos solicitudes.\n",
+        "urls = {\n",
+        "    \"get\": \"https://httpbin.org/get?t=learn+python+programming\",\n",
+        "    \"headers\": \"https://httpbin.org/headers\",\n",
+        "    \"ip\": \"https://httpbin.org/ip\",\n",
+        "    \"user-agent\": \"https://httpbin.org/user-agent\",\n",
+        "    \"UUID\": \"https://httpbin.org/uuid\",\n",
+        "    \"JSON\": \"https://httpbin.org/json\",\n",
+        "}\n",
+        "\n",
+        "# Función para obtener y mostrar el contenido de la respuesta JSON.\n",
+        "def get_content(title, url):\n",
+        "    resp = requests.get(url)\n",
+        "    print(f\"Respuesta para {title}\")\n",
+        "    print(resp.json())\n",
+        "\n",
+        "# Iteramos a través de las URL y llamamos a la función para obtener el contenido.\n",
+        "for title, url in urls.items():\n",
+        "    get_content(title, url)\n",
+        "    print(\"-\" * 40)\n"
+      ],
+      "metadata": {
+        "id": "zDfUUiW3HbKP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "from dataclasses import dataclass\n",
+        "\n",
+        "# Definimos la clase de datos Person usando el decorador @dataclass.\n",
+        "@dataclass\n",
+        "class Person:\n",
+        "    first_name: str\n",
+        "    last_name: str\n",
+        "    id: int\n",
+        "\n",
+        "    # Método para saludar.\n",
+        "    def greet(self):\n",
+        "        print(f'Hola, soy {self.first_name} {self.last_name} y mi ID es {self.id}')\n",
+        "\n",
+        "# Creamos una lista de objetos Person.\n",
+        "people = [Person('Obi-Wan', 'Kenobi', 123),\n",
+        "          Person('Anakin', 'Skywalker', 456)]\n",
+        "\n",
+        "# Guardamos los datos en formato binario en un archivo 'data.pickle'.\n",
+        "with open('data.pickle', 'wb') as stream:\n",
+        "    pickle.dump(people, stream)\n",
+        "\n",
+        "# Cargamos los datos desde el archivo 'data.pickle'.\n",
+        "with open('data.pickle', 'rb') as stream:\n",
+        "    peeps = pickle.load(stream)\n",
+        "\n",
+        "# Iteramos a través de las personas y las saludamos.\n",
+        "for person in peeps:\n",
+        "    person.greet()\n"
+      ],
+      "metadata": {
+        "id": "8q7IfySSHfqM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import shelve\n",
+        "\n",
+        "# Definimos la clase Person.\n",
+        "class Person:\n",
+        "    def __init__(self, name, id):\n",
+        "        self.name = name\n",
+        "        self.id = id\n",
+        "\n",
+        "# Abrimos una base de datos shelve llamada 'shelf1.shelve'.\n",
+        "with shelve.open('shelf1.shelve') as db:\n",
+        "    # Agregamos objetos Person, una lista y otros datos a la base de datos.\n",
+        "    db['obi1'] = Person('Obi-Wan', 123)\n",
+        "    db['ani'] = Person('Anakin', 456)\n",
+        "    db['a_list'] = [2, 3, 5]\n",
+        "    db['delete_me'] = 'Tendremos que eliminar esto...'\n",
+        "\n",
+        "    # Mostramos las claves (keys) de la base de datos.\n",
+        "    print(list(db.keys()))  # ['ani', 'delete_me', 'a_list', 'obi1']\n",
+        "\n",
+        "    # Eliminamos la entrada 'delete_me' de la base de datos.\n",
+        "    del db['delete_me']\n",
+        "\n",
+        "    # Mostramos las claves después de eliminar 'delete_me'.\n",
+        "    print(list(db.keys()))  # ['ani', 'a_list', 'obi1']\n",
+        "\n",
+        "    # Comprobamos si 'delete_me' está en la base de datos (debe ser False).\n",
+        "    print('delete_me' in db)  # False\n",
+        "\n",
+        "    # Comprobamos si 'ani' está en la base de datos (debe ser True).\n",
+        "    print('ani' in db)  # True\n",
+        "\n",
+        "    # Obtenemos la lista 'a_list' de la base de datos, la modificamos y la actualizamos.\n",
+        "    a_list = db['a_list']\n",
+        "    a_list.append(7)\n",
+        "    db['a_list'] = a_list\n",
+        "\n",
+        "    # Mostramos la lista 'a_list' después de la actualización.\n",
+        "    print(db['a_list'])  # [2, 3, 5, 7]\n"
+      ],
+      "metadata": {
+        "id": "Vp6gKTSwHkwy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sqlalchemy.ext.declarative import declarative_base\n",
+        "from sqlalchemy import Column, Integer, String, ForeignKey, create_engine\n",
+        "from sqlalchemy.orm import relationship\n",
+        "\n",
+        "# Creamos una instancia de la base declarativa.\n",
+        "Base = declarative_base()\n",
+        "\n",
+        "# Creamos una conexión a la base de datos SQLite en memoria.\n",
+        "engine = create_engine('sqlite:///:memory:')\n",
+        "\n",
+        "# Definimos la clase del modelo 'Person'.\n",
+        "class Person(Base):\n",
+        "    __tablename__ = 'person'  # Nombre de la tabla en la base de datos\n",
+        "    id = Column(Integer, primary_key=True)\n",
+        "    name = Column(String)\n",
+        "    age = Column(Integer)\n",
+        "\n",
+        "    # Relación uno a muchos con la clase 'Address'\n",
+        "    addresses = relationship(\n",
+        "        'Address',\n",
+        "        back_populates='person',\n",
+        "        order_by='Address.email',\n",
+        "        cascade='all, delete-orphan'\n",
+        "    )\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f'{self.name}(id={self.id})'\n",
+        "\n",
+        "# Definimos la clase del modelo 'Address'.\n",
+        "class Address(Base):\n",
+        "    __tablename__ = 'address'  # Nombre de la tabla en la base de datos\n",
+        "    id = Column(Integer, primary_key=True)\n",
+        "    email = Column(String)\n",
+        "    person_id = Column(ForeignKey('person.id'))\n",
+        "\n",
+        "    # Relación inversa con la clase 'Person'\n",
+        "    person = relationship('Person', back_populates='addresses')\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        return self.email\n",
+        "\n",
+        "    __repr__ = __str__\n",
+        "\n",
+        "# Creamos todas las tablas en la base de datos utilizando los modelos definidos.\n",
+        "Base.metadata.create_all(engine)\n"
+      ],
+      "metadata": {
+        "id": "9Vdbryr9HrRt"
       },
       "execution_count": null,
       "outputs": []
