--- a/examen.ipynb
+++ b/examen.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOy94EpD9VjVIOcurBD86wy",
+      "authorship_tag": "ABX9TyOnzV42KTZ+p8e1Opc2pmUv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,35 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 262
-        },
-        "id": "Mk3fmclth82g",
-        "outputId": "dad079e5-7754-4739-c5c2-5cef8666f6de"
+        "id": "Mk3fmclth82g"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "ingresa el numero5\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-f47b2658de04>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnumero\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ingresa el numero'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mes\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'verdadero'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mnumero\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumero\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mes\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m'f'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "es= 'verdadero'\n",
         "n= int(2)\n",
@@ -66,7 +42,7 @@
         "        es= 'falso'\n",
         "    else:\n",
         "        n = n+1;\n",
-        "if(es== 'v'):\n",
+        "if(es== 'verdadero'):\n",
         "    print('el numero es primo');\n",
         "else:\n",
         "    print('no es primo')"
@@ -75,6 +51,20 @@
     {
       "cell_type": "code",
       "source": [],
+      "metadata": {
+        "id": "HpToVDCG5_Ki"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "0snz3xAGiyUx"
       },
@@ -85,10 +75,9 @@
       "cell_type": "code",
       "source": [
         "def esprimo(numero):\n",
-        "    if numero <= 1:\n",
-        "        return False\n",
-        "    for i in range(2, int(numero) ):\n",
-        "        if numero % i == 0:\n",
+        "\n",
+        "    for n in range(2, int(numero) ):\n",
+        "        if numero % n == 0:\n",
         "            return False\n",
         "    return True\n",
         "\n",
@@ -102,10 +91,45 @@
         "        break"
       ],
       "metadata": {
-        "id": "cteizdVh1H6n"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cteizdVh1H6n",
+        "outputId": "9594f0f0-19c3-4ccf-e3b1-31e4592ecbc6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un valor: 4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uSBdsHqMgJ2z",
+        "outputId": "ff7e393a-91b8-4ceb-9611-2aee209f385c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un valor: 4\n",
+            "es primo\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -117,32 +141,32 @@
         "\n",
         "numeros = [num1, num2, num3]\n",
         "\n",
-        "# Ordenar la lista de números\n",
+        "\n",
         "numeros.sort()\n",
         "\n",
-        "# Calcular la mediana\n",
+        "\n",
         "mediana = numeros[1]\n",
         "\n",
-        "# Imprimir la mediana\n",
-        "print(\"La mediana de los tres números es:\", medianaa)"
+        "\n",
+        "print(\"La mediana de los tres números es:\", mediana)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zIM8kcot5_mn",
-        "outputId": "6450d7dd-9b7a-4543-9f0a-06b1d06f30fb"
+        "outputId": "8313992b-0a40-4fb0-81bb-db22f26d9b15"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Ingrese el primer número: 3\n",
-            "Ingrese el segundo número: 4\n",
-            "Ingrese el tercer número: 6\n",
-            "La mediana de los tres números es: <function medianaa at 0x7d4bed277370>\n"
+            "Ingrese el segundo número: 6\n",
+            "Ingrese el tercer número: 7\n",
+            "La mediana de los tres números es: 6.0\n"
           ]
         }
       ]
@@ -153,20 +177,31 @@
         "import random\n",
         "import string\n",
         "\n",
-        "def generar_contrasena():\n",
-        "    longitud = random.randint(7, 10)  # Longitud aleatoria entre 7 y 10 caracteres\n",
-        "    contrasena = ''.join(random.choice(string.printable[33:127]) for _ in range(longitud))\n",
-        "    return contrasena\n",
+        "def generar_contraseña():\n",
+        "    longitud = random.randint(7, 10)\n",
+        "    contraseña = ''.join(random.choice(string.printable[33:127]) for _ in range(longitud))\n",
+        "    return contraseña\n",
         "\n",
-        "# Generar y mostrar la contraseña\n",
-        "contrasena_generada = generar_contrasena()\n",
-        "print(\"Contraseña generada:\", contrasena_generada)"
+        "contraseña_generada = generar_contraseña()\n",
+        "print(\"Contraseña generada:\", contraseña_generada)"
       ],
       "metadata": {
-        "id": "VBug_-zO-eak"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VBug_-zO-eak",
+        "outputId": "00b8f46e-0bc7-450a-a1cc-ec6d35b4f28f"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Contraseña generada: I= +VQyV\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -187,10 +222,24 @@
         "print(f\"La longitud de la hipotenusa es: {hipotenusa}\")\n"
       ],
       "metadata": {
-        "id": "QJmh6qo56BQm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QJmh6qo56BQm",
+        "outputId": "3076b952-ae1e-4412-da85-cb552838239a"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la longitud del primer cateto: 5\n",
+            "Ingrese la longitud del segundo cateto: 8\n",
+            "La longitud de la hipotenusa es: 9.433981132056603\n"
+          ]
+        }
+      ]
     }
   ]
 }
